--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: playwright-mcp
     runtime: node
     plan: starter
-    buildCommand: npm install && npx playwright install chromium --with-deps
+    buildCommand: npm install && npx playwright install chromium
     startCommand: npm start
     envVars:
       - key: PORT
         value: 8931
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/project/.browsers
