--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "playwright-mcp-server",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx @playwright/mcp@latest --port $PORT --host 0.0.0.0 -- --no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --single-process --no-zygote"
+    "start": "npx @playwright/mcp@latest --port $PORT --host 0.0.0.0 --config playwright-mcp-config.json",
+    "build": "npx playwright install chromium"
   },
   "dependencies": {
-    "@playwright/mcp": "latest"
+    "@playwright/mcp": "latest",
+    "playwright": "latest"
   }
 }
