--- a/playwright-mcp-config.json
+++ b/playwright-mcp-config.json
@@ -12,5 +12,11 @@
         "--no-zygote"
       ]
     }
+  },
+  "server": {
+    "host": "0.0.0.0",
+    "port": 10000,
+    "auth": false,
+    "cors": true
   }
 }
