--- a/playwright-mcp-config.json
+++ b/playwright-mcp-config.json
@@ -17,6 +17,7 @@
     "host": "0.0.0.0",
     "port": 10000,
     "auth": false,
-    "cors": true
+    "cors": true,
+    "allowedOrigins": ["*"]
   }
 }
