--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "playwright-mcp-server",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx @playwright/mcp@latest --port 10000 --host 0.0.0.0 --config playwright-mcp-config.json",
-    "build": "npx playwright install chromium"
+    "start": "npx @playwright/mcp@0.0.14 --port 10000 --host 0.0.0.0 --config playwright-mcp-config.json"
   },
   "dependencies": {
-    "@playwright/mcp": "latest",
+    "@playwright/mcp": "0.0.14",
     "playwright": "latest"
   }
 }
